# cs229aCamera

pose-redis/: CMakeLists.txt
pose-redis/include/: ekf.hpp
pose-redis/src/: CMakeLists.txt  pose-redis.cpp
tracker/: .pose.cpp.swp  CMakeLists.txt  CMakeLists_old.txt  launch_tracker.sh
tracker/include/: ekf.hpp
tracker/src/: CMakeCache.txt  CMakeLists.txt  Makefile  MovingAverage.h  cmake_install.cmake  ekf.hpp  tracker.cpp  tracker_bad.cpp
